<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:app="http://schemas.android.com/apk/res-auto"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fitsSystemWindows="true"
                tools:context="com.example.emmanuel.restaurantfinder.SetBudget"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp">



    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/budget_title"
        android:textSize="25sp"
        android:layout_marginTop="100dp"
        android:layout_centerHorizontal="true"
        android:id="@+id/textView"
        android:textStyle="bold"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/currency"
        android:textSize="30sp"
        android:layout_marginTop="262dp"
        android:layout_marginLeft="35dp"
        android:id="@+id/currency"
        android:textStyle="bold"/>


    <EditText
        android:id="@+id/budget"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:layout_centerVertical="true"
        android:layout_alignLeft="@+id/textView"
        android:layout_alignStart="@+id/textView"
        android:layout_alignRight="@+id/textView"
        android:layout_marginLeft="35dp"
        android:hint="@string/budget_hint" />


    <Button
        android:id="@+id/confirm"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:text="@string/confirm_btn"
        android:layout_marginTop="63dp"
        android:layout_below="@+id/budget"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        />

</RelativeLayout>
