<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout
    android:id="@+id/drawer_layout"
    xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:app="http://schemas.android.com/apk/res-auto"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fitsSystemWindows="true" tools:openDrawer="start"
                tools:context="com.example.emmanuel.restaurantfinder.MainActivity"
                android:background="#0097A7">

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">



    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/RestaurantMaterialTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/RestaurantMaterialTheme.PopupOverlay"/>

    </android.support.design.widget.AppBarLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/startPage_title"
        android:textSize="40sp"
        android:layout_marginTop="50dp"
        android:layout_gravity="center"
        android:textColor="#FFFFFF"
        android:textStyle="bold"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="43dp"
        android:layout_marginLeft="16dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/search"
            android:textSize="23sp"
            android:layout_weight="0"
            android:textColor="#FFFFFF"
            />
        <ImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:id="@+id/search_img"
            android:src="@drawable/ic_search"
            android:layout_weight="0"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/select"
            android:textSize="23sp"
            android:layout_weight="0"
            android:textColor="#FFFFFF"
            />
        <ImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:id="@+id/select_img"
            android:src="@drawable/ic_hand_cursor"
            android:layout_weight="0"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/journey"
            android:textSize="23sp"
            android:layout_weight="0"
            android:textColor="#FFFFFF"
            />
        <ImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:id="@+id/map_img"
            android:src="@drawable/ic_map"
            android:layout_weight="0"/>

    </LinearLayout>



    <android.support.v7.widget.CardView
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:id="@+id/find_restau_card_view"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_marginTop="30dp"
        android:layout_marginLeft="30dp"
        card_view:cardBackgroundColor="#EEEEEE"
        card_view:cardCornerRadius="4dp"
        android:foreground="?android:attr/selectableItemBackground">
        <ImageView
            android:layout_width="70dp"
            android:layout_height="50dp"
            android:id="@+id/restaurant_img"
            android:src="@mipmap/ic_meal_blue"
            />

        <TextView
            android:id="@+id/text_find_restau"
            android:text="@string/btn_FindRestaurant"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="80dp"
            android:textSize="20sp"
            android:layout_marginTop="15dp"
            android:textStyle="bold"/>
    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:id="@+id/myAccount_card_view"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="30dp"
        card_view:cardBackgroundColor="#EEEEEE"
        card_view:cardCornerRadius="4dp"
        android:foreground="?android:attr/selectableItemBackground">

        <ImageView
            android:layout_width="70dp"
            android:layout_height="50dp"
            android:id="@+id/myAccount_img"
            android:src="@mipmap/ic_my_account_"
            />

        <TextView
            android:id="@+id/text_MyAccount"
            android:text="@string/btn_MyAccount"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="80dp"
            android:textSize="20sp"
            android:layout_marginTop="15dp"
            android:textStyle="bold"/>
    </android.support.v7.widget.CardView>


</LinearLayout>

    <ListView
        android:id="@+id/navList"
        android:layout_width="200dp"
        android:layout_height="match_parent"
        android:layout_gravity="left|start"
        android:background="#ffeeeeee"/>


</android.support.v4.widget.DrawerLayout>
