<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
                            >


    <android.support.v7.widget.CardView
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:id="@+id/cafe_card_view"
    android:layout_width="300dp"
    android:layout_height="120dp"
    android:layout_marginTop="90dp"
    android:layout_marginLeft="30dp"
    card_view:cardBackgroundColor="#E0E0E0"
    card_view:cardCornerRadius="4dp"
    android:foreground="?android:attr/selectableItemBackground">
    <ImageView
        android:layout_width="90dp"
        android:layout_height="100dp"
        android:layout_marginLeft="8dp"
        android:id="@+id/cafe_img"
        android:src="@mipmap/ic_cafe"

        />

    <TextView
        android:id="@+id/text_cafe"
        android:text="@string/cafe"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="125dp"
        android:layout_marginTop="35dp"
        android:textSize="30sp"
        android:textStyle="bold"/>
</android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:id="@+id/restaurant_card_view"
        android:layout_width="300dp"
        android:layout_height="120dp"
        android:layout_marginTop="30dp"
        android:layout_marginLeft="30dp"
        card_view:cardBackgroundColor="#E0E0E0"
        card_view:cardCornerRadius="4dp"
        android:foreground="?android:attr/selectableItemBackground">
        <ImageView
            android:layout_width="80dp"
            android:layout_height="100dp"
            android:layout_marginLeft="8dp"
            android:id="@+id/restaurant_img"
            android:src="@mipmap/ic_restaurant"
            />

        <TextView
            android:id="@+id/text_restaurant"
            android:text="@string/restaurant"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="100dp"
            android:layout_marginTop="35dp"
            android:textSize="30sp"
            android:textStyle="bold"/>
    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:id="@+id/fastFood_card_view"
        android:layout_width="300dp"
        android:layout_height="120dp"
        android:layout_marginTop="30dp"
        android:layout_marginLeft="30dp"
        card_view:cardBackgroundColor="#E0E0E0"
        card_view:cardCornerRadius="4dp"
        android:foreground="?android:attr/selectableItemBackground">
        <ImageView
            android:layout_width="80dp"
            android:layout_height="100dp"
            android:layout_marginLeft="8dp"
            android:id="@+id/fastFood_img"
            android:src="@mipmap/ic_fast_food"
            />

        <TextView
            android:id="@+id/text_fastFood"
            android:text="@string/fast_food"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="100dp"
            android:layout_marginTop="35dp"
            android:textSize="30sp"
            android:textStyle="bold"/>
    </android.support.v7.widget.CardView>

</LinearLayout>